--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "sass": "^1.58.3",
+    "sharp": "^0.31.3",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
