--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-tabs": "^6.0.0",
     "sass": "^1.58.3",
     "sharp": "^0.31.3",
     "typewriter-effect": "^2.19.0"
