update environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-NEXT_PUBLIC_DRIBBBLE_TOKEN=
-NEXT_PUBLIC_GITHUB_USERNAME=
-
-NEXT_PUBLIC_GITHUB_TOKEN=
+DRIBBBLE_TOKEN=
+GITHUB_USERNAME=
+GITHUB_TOKEN=
 SECRET_TOKEN=
