--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portofolio-web-v2",
-  "version": "1.2",
+  "version": "1.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,8 +19,10 @@
     "next": "13.1.6",
     "next-sitemap": "^4.0.7",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-snow-particle": "^1.0.6",
     "react-tabs": "^6.0.0",
     "react-tsparticles": "^2.9.3",
